<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>laser_slam</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zengfeixiang@xiaomi.com">zfx</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>protos</depend>
  <depend>transform</depend>
  <depend>common</depend>
  <depend>sensor</depend>
  <depend>pose_extrapolator</depend>
  <depend>range_data_matching</depend>
  <depend>pose_graph</depend>
  <depend>rviz_display</depend>
  <depend>pcl_msgs</depend>
  <depend>cyberdog_visions_interfaces</depend>
  <depend>nav2_util</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
